# ferr-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  storage.rs
src/updates/: mod.rs
src/updates/channel_posts/: mod.rs
src/updates/messages/: message_handler.rs  mod.rs
src/updates/p_messages/: message_handler.rs  mod.rs
