[package]
name = "ferr-bot"
version = "0.1.0"
authors = ["Swarnim Arun <swarnimarun11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.6"
antidote = "1.0"
tokio-core = "0.1"
error-chain = "0.11"
futures = "0.1"